--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,9 @@ body {
   padding-top: 70px;
 }
 
+.tab-padding {
+  padding-top: 15px;
+}
 
 .gly-spin {
   -webkit-animation: spin 2s infinite linear;
