--- a/src/app/components/record-job-list/record-job-list.component.html
+++ b/src/app/components/record-job-list/record-job-list.component.html
@@ -1,17 +1,24 @@
-<div class="col-sm-12 col-md-6">
-  <ul class="list-group">
-    <li class="list-group-item" *ngFor="let recordJob of ( pagedRecordJobs$ | async )">{{ recordJob.name }}
-      <a href="javascript:void(0);" (click)="replayjobmodal.show(recordJob)"><i class="glyphicon glyphicon-repeat pull-right"></i></a>
-    </li>
-  </ul>
-  <pagination *ngIf="(recordJobs | async )?.length > itemsPerPage"
-              [totalItems]="(recordJobs | async )?.length"
-              [(ngModel)]="currentPage"
-              [itemsPerPage]="itemsPerPage"
-              (pageChanged)="pageChanged($event)"></pagination>
-</div>
+<ul class="list-group">
+  <li class="list-group-item" *ngFor="let recordJob of ( pagedRecordJobs$ | async )">{{ recordJob.name }}
+    <a href="javascript:void(0);" (click)="delete(recordJob)"><i class="glyphicon glyphicon-trash pull-right icon-padding"></i></a>
+    <a href="javascript:void(0);" (click)="replayjobmodal.show(recordJob)"><i class="glyphicon glyphicon-repeat pull-right"></i></a>
+  </li>
+</ul>
+<pagination *ngIf="(recordJobs | async )?.length > itemsPerPage"
+            [totalItems]="(recordJobs | async )?.length"
+            [(ngModel)]="currentPage"
+            [itemsPerPage]="itemsPerPage"
+            (pageChanged)="pageChanged($event)"></pagination>
 
 <!-- Replay Job Modal -->
 <rec-replay-job #replayjobmodal="replayjobmodal"
                 [replayEndpoints]="replayEndpoints$ | async"
                 (onOk)="publishReplayJobRequest($event)"></rec-replay-job>
+
+<ng-template #deleteRecordJobTemplate>
+  <div class="modal-body text-center">
+    <p>Do you really want to remove the job '{{recordJobToDelete.name}}'?</p>
+    <button type="button" class="btn btn-default" (click)="confirm()" >Yes</button>
+    <button type="button" class="btn btn-primary" (click)="decline()" >No</button>
+  </div>
+</ng-template>
