Correlation ID added for analysis

--- a/src/app/components/record-job-analysis/record-job-analysis.component.html
+++ b/src/app/components/record-job-analysis/record-job-analysis.component.html
@@ -39,7 +39,7 @@
       <strong>Error! </strong>{{(queryResult | async).error}}
     </alert>
   </div>
-  <div *ngIf="(queryResult | async)" class="table-responsive">
+  <div class="table-responsive">
     <table class="table">
       <thead>
         <tr>
